# term-agent

./: README.md  SKILL_INSTALLATION.md  pyproject.toml  terminal-session.md
term_agent/: __init__.py  agent.py  cli.py
term_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
