[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "term-agent"
version = "0.1.0"
description = "Stateless terminal agent for Claude Code using tmux"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "libtmux>=0.50.0",
]

[project.scripts]
term-agent = "term_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
